hphp/test/zend/good/ext-standard-math/bug30069.php
<?php
echo ".1" * "2";
echo "\n";
echo "-.1" * "2";
echo "\n";
?>