hphp/test/zend/bad/ext-spl/SplFixedArray_getSize_pass_param.php
<?php
$fixed_array = new SplFixedArray(2);
echo "*test* ".$fixed_array->getSize(3);
?>